fix text wrapping

--- a/resources/control-panel.css
+++ b/resources/control-panel.css
@@ -407,6 +407,7 @@ transition: all 0.3s ease;
    padding: 0 0.5rem;
    vertical-align: top;
    content: attr(data-content);
+   white-space: nowrap;
    background-color: var(--color-v-light-grey);
    font-size: 12px;
    font-family: "Open Sans";
